完成rag流程、实现统一的请求和回复体